[package]
name = "rustaid"
version = "0.1.0"
edition = "2021"
description = "A small library providing random data for testing puposes"
homepage = "https://github.com/Rek-Malorm/rustaid"
repository = "https://github.com/Rek-Malorm/rustaid"
readme = "README.md"
license-file = "LICENSE"
keywords = ["unit", "acceptance", "test", "random"]
categories = ["development-tools", "development-tools::testing"]
include = [
    "**.*.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]

[dependencies]
rand = "0.8"
num = "0.4"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3