[package]
name = "rustyaid"
version = "0.1.0"
edition = "2021"
description = "A small library providing random data for testing puposes"
homepage = "https://github.com/Rek-Malorm/rustyaid"
repository = "https://github.com/Rek-Malorm/rustyaid"
readme = "README.md"
license ="MIT OR Apache-2.0"
keywords = ["unit", "acceptance", "test", "random"]
categories = ["development-tools", "development-tools::testing"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]

[dependencies]
rand = "0.8"
num = "0.4"

[lib]
name = "rustyaid"
path = "src/lib.rs"
test = true
doctest = true
bench = false
proc-macro = false
edition = "2021"
crate-type = ["lib"]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3